# Shoumei-RTL

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  COMMANDS.md  DebugRAM.lean  ExportVerificationCerts.lean  GETTING_STARTED.md  GenTests.lean  GenerateAll.lean  GenerateBranchExecUnit.lean  GenerateCppSim.lean  GenerateDecoder.lean  GenerateFreeList.lean  GenerateIntegerExecUnit.lean  GenerateMuxTree.lean  GenerateOpType.lean  GeneratePhysRegFile.lean  GenerateQueueN.lean  GenerateRAT.lean  GenerateRISCVDecoder.lean  GenerateShoumei.lean  GenerateSystemC.lean  Main.lean  Makefile  README.md  RISCV_TOMASULO_DESIGN.md  RISCV_TOMASULO_PLAN.md  TestChiselV2.lean  TestCppSim.lean  TestDecoder.lean  TestMuxTree.lean  TestRISCVParser.lean  TestSVV2.lean  TestSystemC.lean  bootstrap.py  build  build_cppsim.txt  build_cppsim2.txt  (+6 more)
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  lec.yml  proof-coverage.yml  smoke-test.yml  systemc.yml  verify.yml
chisel/: .scalafmt.conf  build.sbt
chisel/project/: plugins.sbt
chisel/src/main/scala/: Main.scala
cpp_sim/: CMakeLists.txt  build.sh
custom_opcodes/: vme_instr_dict.json
docs/: FEATURES.md  ROADMAP.md  TODO.md  adding-a-module.md  circuit-bitvec-compiler-design.md  codegen-v2-draft.md  codegen-v2.md  compiler-integration.md  cosimulation.md  future-improvements.md  hazard-patterns.md  lean-lsp-guide.md  lec-diagnostic-plan.md  milestone-alu-proven.md  phase4-summary.md  phase4c-behavioral-proofs.md  phase7-memory-consistency-proofs.md  phase7-status.md  physical-design.md  proof-strategies.md  rs4-architecture.md  shoumei-text-format.md  systemc-backend-plan.md  test-generation.md  verification-guide.md  wire-naming-improvements.md  yosys-slang-setup.md  zicsr-zifencei-design.md
examples/adder/: README.md
lean/: ProvenRTL.lean  Shoumei.lean
lean/ProvenRTL/: DSL.lean  Semantics.lean  Theorems.lean
lean/ProvenRTL/Circuits/Sequential/: DFF.lean
lean/ProvenRTL/Codegen/: Chisel.lean  Common.lean  SystemVerilog.lean
lean/ProvenRTL/Examples/: Adder.lean  AdderProofs.lean
lean/Shoumei/: DSL.lean  Semantics.lean  Theorems.lean  Verification.lean
lean/Shoumei/Circuits/Combinational/: ALU.lean  ALUBitVecBridge.lean  ALUCodegen.lean  ALUProofs.lean  Arbiter.lean  Comparator.lean  ComparatorCodegen.lean  ComparatorProofs.lean  Decoder.lean  DecoderProofs.lean  FPMisc.lean  FPPack.lean  FPU.lean  FPUTest.lean  FPUnpack.lean  KoggeStoneAdder.lean  LogicUnit.lean  LogicUnitCodegen.lean  (+19 more)
lean/Shoumei/Codegen/: ASAP7.lean  Chisel.lean  ChiselV2.lean  Common.lean  CppSim.lean  Queue.lean  ShoumeiEmit.lean  ShoumeiParse.lean  SystemC.lean  SystemVerilog.lean  SystemVerilogNetlist.lean  SystemVerilogV2.lean  Testbench.lean  Unified.lean
lean/Shoumei/DSL/: AnnotationTest.lean  AutoCodegen.lean  Decoupled.lean  DecoupledProofs.lean  Interfaces.lean
lean/Shoumei/Examples/: Adder.lean  AdderProofs.lean  QueueExample.lean
lean/Shoumei/RISCV/: CDBMux.lean  CDBMuxProofs.lean  CDBMux_W2.lean  CPU.lean  CPUBehavioral.lean  CPUCircuitHelpers.lean  CPUControl.lean  CPUControlProofs.lean  CPUControlTest.lean  CPUHelperProofs.lean  CPUHelperSpecs.lean  CPUHelpers.lean  CPUProofs.lean  CPUTest.lean  CPUTestbench.lean  CPU_W2.lean  CachedCPUTestbench.lean  CodegenChisel.lean  CodegenCppSim.lean  CodegenSystemC.lean  CodegenSystemVerilog.lean  CodegenTest.lean  Config.lean  Decoder.lean  DecoderProofs.lean  DecoderProofsTest.lean  DecoderTest.lean  Encoder.lean  EncoderProofs.lean  Fetch.lean  FetchProofs.lean  FetchTest.lean  Fetch_W2.lean  ISA.lean  InstructionList.lean  OpTypeGenerated.lean  OpcodeParser.lean  Semantics.lean  SemanticsProofs.lean  SemanticsTest.lean  (+2 more)
lean/Shoumei/Reflection/: ALUSymbolic.lean  BitVecPacking.lean  BoolExpr.lean  CompileCircuit.lean  CompileGate.lean  SequentialCompile.lean  SymbolicCompile.lean  WireMap.lean
lean/Shoumei/TestGen/: AsmEmitter.lean  Patterns.lean
lean/Shoumei/Verification/: Compositional.lean  CompositionalCerts.lean  ExportCerts.lean
patches/coralnpu/: 0001-verilator-compat.patch
physical/: CPU_RV32IF_synth.sv  CPU_RV32IMF_Zicsr_Zifencei_Microcoded_synth.sv  CPU_RV32IMF_Zicsr_Zifencei_synth.sv  CPU_RV32IMF_synth.sv  CPU_RV32IM_Zicsr_Zifencei_synth.sv  CPU_RV32IM_synth.sv  CPU_RV32I_synth.sv  CachedCPU_RV32IMF_Zicsr_Zifencei_Microcoded_synth.sv  CachedCPU_RV32IM_Zicsr_Zifencei_synth.sv  config.mk  constraints.sdc  export-artifacts.sh  export-layout-png.py  run-openroad.sh
scripts/: apply-patches.sh  build-spike.sh  claude-dev  fst_inspect  fst_inspect.cpp  fst_stubs.c  gen-arc-header.py  gen_queue.lean  install-circt.sh  java-proxy-bridge.py  setup-env.sh  setup-riscv-toolchain.sh  vcd_inspect.py  vme_conv2d_golden.py
systemc/: CMakeLists.txt  build.sh
testbench/: Makefile  cosim_main.cpp  cosim_main_arc.cpp  sim_main.cpp  sim_main_arc.cpp  tb_cpu.sv
testbench/coremark/: Makefile  core_portme.c  core_portme.h  coremark.dump  coremark.elf  crt0.S  ee_printf.c  shoumei.ld
testbench/lib/: cppsim_oracle.cpp  cppsim_oracle.h  elf_loader.cpp  elf_loader.h  kanata_tracer.cpp  kanata_tracer.h  rv32_disasm.h  spike_oracle.cpp  spike_oracle.h  systemc_oracle.cpp  systemc_oracle.h
testbench/riscv-tests/: Makefile  riscv_test.h  shoumei.ld
testbench/tests/: FreeRTOSConfig.h  Makefile  addi_test.c  addi_test.hex  branch_flush_x0_test.c  branch_test.c  conv2d_golden.h  crt0.S  csr_test.c  dep_test.c  dep_test.hex  ecall_test.c  freertos.ld  freertos_boot.S  freertos_demo.c  hello_test.c  ipc_loop.c  jal_jalr_test.c  jal_ret_flush_test.c  jalr_a0_irq_test.c  jalr_a0_test.c  lui_auipc_test.c  matrix_basic.c  mepc_only_test.c  minilib.c  minstret_test.c  mret_test.c  pass_test.c  pass_test.hex  shoumei.h  shoumei.ld  sltiu_test.c  store_load_test.c  subword_store_test.c  timer_irq_test.c  trap_csr_test.c  vector_basic.c  wfi_test.c
verification/: COMPOSITIONAL_VERIFICATION.md  FullAdder.eqy  FullAdder.sby  LEC_RESULTS.md  proof-coverage.sh  run-lec.sh  run-yosys-lec.sh  slang-lint.py  smoke-test.sh  validate-sv.sh
(+100 files in other folders)
